# junit-to-slack-notification

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: release.yml
src/: main.rs
