[package]
name = "junit_to_slack_notification"
version = "0.1.0"
edition = "2021"

[dependencies]
junit-parser = "1.3.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
mockito = "1.7.0"
